--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,28 @@
 spring:
+  task:
+    execution:
+      pool:
+        allow-core-thread-timeout: false
   r2dbc:
+    pool:
+      max-size: 10
+      initial-size: 5
     url: r2dbc:postgresql://localhost:5432/postgres
     username: postgres
     password: admin
-timeouts:
-  api:
-    default: 30s
-    contract-status: 60s
+server:
+  reactive:
+    session:
+      timeout: 30m
+logging:
+  level:
+    root: INFO
+    org:
+      springframework:
+        web: DEBUG
+        webflux: DEBUG
+    reactor:
+      core: DEBUG
+      netty: DEBUG
+  pattern:
+    console: "%d{yyyy-MM-dd HH:mm:ss} - %msg%n"
