--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,11 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-validation</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.liquibase</groupId>
+      <artifactId>liquibase-core</artifactId>
+      <version>4.27.0</version>
+    </dependency>
   </dependencies>
 
   <build>
