--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,8 @@ spring:
     url: r2dbc:postgresql://localhost:5432/postgres
     username: postgres
     password: admin
+  kafka:
+    bootstrap-servers: http://localhost:9094
 server:
   reactive:
     session:
